body overflow fix, 2 section init

--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -8,7 +8,8 @@ html {
 
 body {
   margin: 0;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 img {
